- Stop calculating column width if no width is set. BZ #1084860
- Simply styling of code, and admonitions in HTML5. BZ #1093498
- Added tip formatting. BZ #1033830
- Remove incorrect prompt. BZ #1096544
- Add "popper" to hide program listing after 4 lines. BZ #1088051
- Fix white space being removed from msgids when merging. BZ #1097090
- Add code language switching. BZ #1092351

4.1.3 Wed May 21 2014
- Fix extra space breaking spec files with sort_order. BZ #1099262
- Make div.title bold in db4.css. BZ #1049661

4.1.2 Wed May 14 2014
- Fix broken DocBook5 validation stopping package builds. BZ #1097495
- Many updates to Users' Guide.

4.1.1 Thu May 8 2014
- Fix long tables and pre's breaking PDF build. BZ #1095574

4.1.0 Mon May 5 2014
- Add abstract to release notes so PDF builds
- Fix RPM upgrade not pulling in required XML::TreeBuilder version. BZ #1053609
- Allow PDF to build without any authors. BZ #1050975
- Increase XML::LibXSLT::max_depth to 10K. BZ #1035525
- Include entrytbl in cols count. BZ #1069405
- Add 'td' to translatable blocks list. BZ #1059938
- Treat entry like para for mixedmode tags. BZ #1039382
- Add blank page after cover page in PDF. BZ #1050770
- Fix replaceable override in DB 4.5 XSL. BZ #1054462
- Store processing instructions. BZ #1045463
- Add releaseinfo support. BZ #1050789
- Add support for wkhtmltopdf 0.12.0
- Add non-minified JS files. BZ #1062109
- Use term as ID node for varlistentry. BZ #1050836
- Fix acroread search and image issues. BZ #1038393 #1065810
- Add line numbering to DB5 html output. BZ #1074709
- Remove glossdiv and indexdiv headings from PDF TOC. BZ #1058545
- Add basic handling & style for revisionflag.
- Fix admonition style for wkhtmnltopdf 0.12.
- Pass chunk_section_depth to wkhtmltopdf. BZ #1044848
- Do not die on empty brand conf files. BZ #1037037
- Fix font embedding in PDF.
- Enforce RPM API requirements. BZ #1029293
- Fix desktop SPEC file creation. BZ #1081087