@@ -355,7 +355,7 @@ my $builder = $class->new(
         'XML::LibXML'                            => 1.70,
         'XML::LibXSLT'                           => 1.70,
         'XML::Simple'                            => 0,
-        'XML::TreeBuilder'                       => 5.1,
+        'XML::TreeBuilder'                       => 5.3,
         'Text::CSV_XS'                           => 0,
         'Locale::Maketext::Lexicon'              => 0,
         version                                  => 0.77,
@@ -406,7 +406,7 @@ my $builder = $class->new(
         'XML::LibXML'                            => 1.67,
         'XML::LibXSLT'                           => 1.67,
         'XML::Simple'                            => 0,
-        'XML::TreeBuilder'                       => 5.1,
+        'XML::TreeBuilder'                       => 5.3,
         'Text::CSV_XS'                           => 0,
         version                                  => 0.77,
         'Locale::Msgfmt'                         => 0,
