@@ -50,7 +50,7 @@ is( $result, 0, 'build the Users Guide' );
 
 $result
     = system( @perl_args, $publican, 'build', '--formats',
-    'html,html-single,html-desktop,pdf,txt,eclipse,epub,drupal-book',
+    'html,html-single,html-desktop,pdf,txt,eclipse,epub',
     '--langs', 'en-US', '--publish', '--embedtoc', @common_opts );
 
 is( $result, 0, 'build the Users Guide in all formats' );
