@@ -7,6 +7,7 @@
 - Add "popper" to hide program listing after 4 lines. BZ #1088051
 - Fix white space being removed from msgids when merging. BZ #1097090
 - Add code language switching. BZ #1092351
+- Fix CDATA support, bump XML::TreeBuilder dep to 5.3. BZ #1101050
 
 4.1.3 Wed May 21 2014
 - Fix extra space breaking spec files with sort_order. BZ #1099262
